# BioPro

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  BioPro.spec  LICENSE  MODULE_AUTHOR_GUIDE.md  README.md  ROADMAP.md  WIKI_MANIFEST.md  WesternBlotPipeline.md  authorities.json  catalogue.json  debug_peaks.py  gen_figures.py  icon.icns  index.html  mkdocs.yml  pyproject.toml  registry.json  requirements.in  requirements.txt  run_tests.py  sdk_upgrade_roadmap.md  sitemap.xml  soul.md  verify_imports.py
.devcontainer/: devcontainer.json
.github/workflows/: audit.yml  build.yml  deploy_docs.yml  pipeline.yml  plugin-release-template.yml  test.yml  wiki-sync.yml
biopro/: __init__.py  __main__.py
biopro/analysis/: __init__.py  image_utils.py  lane_detection.py  peak_analysis.py  ponceau.py  state.py  western_blot.py
biopro/core/: __init__.py  config.py  developer_database.py  diagnostics.py  event_bus.py  history_manager.py  manifest_parser.py  module_manager.py  network_updater.py  package_manager.py  plugin_doctor.py  plugin_sdk.py  preferences.py  project_manager.py  resource_inspector.py  resource_manager.py  sbom.py  sign_plugin.py  sound_manager.py  task_scheduler.py  trust_manager.py  trust_overrides.py  trust_path.py  trust_storage.py  tutorial_manager.py  update_checker.py
biopro/plugins/: __init__.py  sdk_utils.py
biopro/sdk/: __init__.py  sdk_cli.py
biopro/shared/: __init__.py
biopro/themes/: accessible_okabe_ito.json  aeroflow_zen.json  default.json  galactic_dark.json  galactic_imperial.json  galactic_light.json  guild_tracker.json  hydroflow_polar.json  star_wars.json  star_wars_imperial.json  star_wars_light.json  subcavern_luminous.json  tristate_innovation.json  vortex_kinetics.json
biopro/tutorials/: __init__.py  core_intro.py
biopro/ui/: __init__.py  dialogs.py  home_screen.py  hub_widgets.py  hub_window.py  image_canvas.py  lane_profile_dialog.py  main_window.py  results_widget.py  store_dialog.py  theme.py  western_blot_panel.py  workflows_tab.py
docs/: 01_Introduction.md  02_Security_and_Trust.md  03_Developer_Handbook.md  03_Tutorial_First_Analysis.md  04_Module_Author_Guide.md  05_FAQ_Troubleshooting.md  05_Plugin_Reference.md  06_Developer_Handbook.md  06_SDK_Summary.md  07_Core_Nervous_System.md  07_Module_Author_Guide.md  08_Plugin_Reference.md  09_SDK_Summary.md  10_High_Performance_Scaling.md  10_Security_and_Trust.md  11_Core_Nervous_System.md  11_Dynamic_Plugin_Internals.md  12_Tutorial_The_Wizard.md  13_Project_Management.md  13_The_Time_Machine_Engine.md  16_API_Reference.md  16_API_Reference_Contrib.md  16_API_Reference_UI.md  16_API_Reference_Utils.md  17_AI_Assistant_Grogu.md  index.md
docs/internal/: 11_Core_Nervous_System.md  12_LifeCycle_Project_Management.md  13_The_Time_Machine_Engine.md  14_High_Performance_Scaling.md  15_Dynamic_Plugin_Internals.md  16_API_Reference_Core.md  17_AI_Assistant.md  18_Testing_Philosophy.md  19_Developer_Onboarding.md  20_Security_and_Signing.md  21_Supply_Chain_Security.md  22_Plugin_Documentation.md
docs/plugin_template/: mkdocs.yml
docs/templates/: plugin-release-ci.yml
docs/user/: 01_User_Guide.md  02_Getting_Started.md  03_Tutorial_First_Analysis.md  04_Project_Management.md  05_FAQ_Troubleshooting.md  10_Security_and_Trust.md  security_settings.md
internal/11_Core_Nervous_System/: index.html
internal/12_LifeCycle_Project_Management/: index.html
internal/13_The_Time_Machine_Engine/: index.html
internal/14_High_Performance_Scaling/: index.html
internal/15_Dynamic_Plugin_Internals/: index.html
internal/16_API_Reference_Core/: index.html
internal/17_AI_Assistant/: index.html
internal/17_AI_Assistant_Grogu/: index.html
internal/18_Testing_Philosophy/: index.html
internal/19_Developer_Onboarding/: index.html
internal/20_Security_and_Signing/: index.html
internal/21_Supply_Chain_Security/: index.html
internal/22_Plugin_Documentation/: index.html
plugin_template/docs/: index.html
samples/: dense_8lane_metadata.json  generate_samples.py  inverted_6lane_metadata.json  sparse_4lane_metadata.json  standard_6lane_metadata.json
scripts/: e2e_plugin_test.py  generate_demo_fcs.py  sign_authorities.py  test_discovery.py
search/: search_index.json
tests/: README.md  conftest.py  test_ai_full.py  test_ai_ui.py  test_band_matching.py  test_boot.py  test_boot_cli.py  test_help_system.py  test_image_utils.py  test_lane_detection.py  test_mermaid_rendering.py  test_peak_analysis.py  test_resources.py  test_sanity.py  test_scheduler_gc.py  test_sdk_ai.py  test_sdk_docs.py  test_sdk_events.py  test_ui.py  test_western_blot.py
tests/core/: test_config.py  test_developer_database.py  test_developer_smoothing.py  test_diagnostics.py  test_double_signing.py  test_event_bus.py  test_history_manager.py  test_identity_and_manifest.py  test_manifest_parser.py  test_marketplace_caching.py  test_module_manager.py  test_multi_author_trust.py  test_network_updater.py  test_package_manager.py  test_plugin_venv_crossplatform.py  test_preferences.py  test_project_manager.py  test_resource_lifecycle.py  test_sbom.py  test_sign_plugin.py  test_sound_manager.py  test_split_manifest.py  test_supply_chain.py  test_task_scheduler.py  test_trust_architecture.py  test_trust_overrides.py  test_trust_strategies.py  test_update_checker.py
tests/scripts/: test_reproducibility.py  verify_windows_parity.py
tests/sdk/: run_contract.py  test_analysis_worker.py  test_dependency_verification.py  test_dna_loader.py  test_image_utils.py  test_logging.py  test_plugin_contract.py  test_plugin_sdk.py  test_sdk_utils.py  test_sdk_utils_expanded.py
tests/ui/: test_hub_ui.py  test_plugin_store.py  test_project_launcher.py  test_theme.py  test_ui_components_shared.py  test_update_banner.py  test_workspace_dashboard.py  test_workspace_window.py
themes/: default.json  star_wars.json
user/01_User_Guide/: index.html
user/02_Getting_Started/: index.html
user/03_Tutorial_First_Analysis/: index.html
user/04_Project_Management/: index.html
user/05_FAQ_Troubleshooting/: index.html
(+97 files in other folders)
