[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biopro"
version = "1.0.5"
description = "An open-source, intuitive bio analysis tool — Open Source, Free and Accessible to all."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BioPro Contributors" },
]
keywords = ["biology", "image-analysis", "western-blot", "densitometry", "gel-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "PyQt6>=6.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-image>=0.22",
    "opencv-python-headless>=4.9",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "openpyxl>=3.1",
    # Plugin: cytometrics
    "torch>=2.0",
    "torchvision>=0.15",
    "cellpose>=3.0",
    "psutil>=6.0",
    "requests>=2.31",
    # Plugin: flow_cytometry
    "flowkit>=0.9",
    "flowio>=1.1",
    "fast-histogram>=0.12",
    # Image utilities

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "ruff>=0.3",
]

[project.scripts]
biopro = "biopro.__main__:main"
biopro-sign = "biopro.core.sign_plugin:main"

[project.urls]
Homepage = "https://github.com/BioPro/biopro"
Documentation = "https://github.com/BioPro/biopro#readme"
Repository = "https://github.com/BioPro/biopro"
Issues = "https://github.com/BioPro/biopro/issues"

[tool.setuptools.packages.find]
include = ["biopro*"]
exclude = ["tests*", "test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstring-convention]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: unit tests for core functionality",
    "integration: integration tests",
    "slow: slow running tests",
]
