[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biopro"
version = "1.3.9"
description = "An open-source, intuitive bio analysis tool — Open Source, Free and Accessible to all."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BioPro Contributors" },
]
keywords = ["biology", "image-analysis", "western-blot", "densitometry", "gel-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "biopro-sdk>=1.2.3",
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "numpy>=1.26,<2.2",
    "scipy>=1.12",
    "scikit-image>=0.22",
    "opencv-python-headless>=4.9",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "openpyxl>=3.1",
    # Core Utils
    "psutil>=6.0",
    "requests>=2.31",
    "flowkit>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "mypy>=1.9",
    "pip-audit>=2.7.0",
    "types-requests",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
biopro = "biopro.__main__:main"
biopro-sign = "biopro.core.sign_plugin:main"

[project.urls]
Homepage = "https://github.com/BioPro/biopro"
Documentation = "https://github.com/BioPro/biopro#readme"
Repository = "https://github.com/BioPro/biopro"
Issues = "https://github.com/BioPro/biopro/issues"

[tool.setuptools.packages.find]
include = ["biopro*"]
exclude = ["tests*", "test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B", "SIM"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D205",
    "E501", "E722", "B024", "B027"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501", "E402"]
"tests/**/*.py" = ["D", "E501", "E402"]
"biopro/ui/**/*.py" = ["D", "E501"]
"biopro/plugins/**/*.py" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["biopro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: unit tests for core functionality",
    "integration: integration tests",
    "slow: slow running tests",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "numpy.*",
    "scipy.*",
    "cv2.*",
    "skimage.*",
    "pandas.*",
    "torch.*",
    "torchvision.*",
    "matplotlib.*",
    "openpyxl.*",
    "cellpose.*",
    "llama_cpp.*",
    "pytest.*",
    "certifi.*",
    "cryptography.*",
    "biopro_sdk.*",
    "biopro_sdk",
    "umap.*",
    "seaborn.*",
    "requests.*",
    "requests"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "biopro.ui.*"
ignore_errors = true
